objects/LLC_BI__Debt__c.object
<CustomObject>
    <description>The debt object stores information about an applicant&apos;s debts.</description>
    <fields>
        <fullName>LLC_BI__Account_Number__c</fullName>
        <description>The system populates this optional field to associate the account number with the creditor.</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Type_Code__c</fullName>
        <description>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</description>
        <inlineHelpText>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</inlineHelpText>
        <label>Account Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this debt belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Available_Amount__c</fullName>
        <description>This field is optional and represents the amount available to borrow on the debt.</description>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and is the contact who has this debt.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_30_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</inlineHelpText>
        <label>Count 30 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_60_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</inlineHelpText>
        <label>Count 60 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_90_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</inlineHelpText>
        <label>Count 90 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Creditor_Industry_Code__c</fullName>
        <description>The system populates this optional text field with the creditor industry code.</description>
        <inlineHelpText>The system populates this optional text field with the creditor industry code.</inlineHelpText>
        <label>Creditor Industry Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Creditor_Name__c</fullName>
        <description>This optional text field populates with the credit subscriber&apos;s name.</description>
        <label>Creditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Creditor_Number__c</fullName>
        <description>The system populates this optional text field with the credit subscriber&apos;s member code.</description>
        <inlineHelpText>The system populates this optional text field with the credit subscriber&apos;s member code.</inlineHelpText>
        <label>Creditor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Status_Code__c</fullName>
        <description>The system populates this optional text field with the current status code, which indicates the current status of the account.</description>
        <inlineHelpText>The system populates this optional text field with the current status code, which indicates the current status of the account.</inlineHelpText>
        <label>Current Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Of_Last_Payment__c</fullName>
        <description>The system populates this optional date field with the date the borrower made their most recent monthly payment.</description>
        <inlineHelpText>The system populates this optional date field with the date the borrower made their most recent monthly payment.</inlineHelpText>
        <label>Date Of Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Opened__c</fullName>
        <description>The system populates this optional date field with the date the account was opened.</description>
        <inlineHelpText>The system populates this optional date field with the date the account was opened.</inlineHelpText>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field represents the Debt Schedule this debt is tied to.</description>
        <label>Debt Schedule</label>
        <referenceTo>LLC_BI__Debt_Schedule__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Type__c</fullName>
        <description>This field is required and denotes the type of debt.</description>
        <label>Debt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Auto/Lease Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Child Support Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Credit Card Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Student Loan Payments</fullName>
                </value>
                <value>
                    <fullName>Other Monthly Installment</fullName>
                </value>
                <value>
                    <fullName>Proposed Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if this debt is excluded from total debt calculations.</description>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excluded_Reason__c</fullName>
        <description>This field is optional and is a short description of the reason why the debt was excluded from total calculations.</description>
        <inlineHelpText>Enter a short description of the reason why the debt was excluded from total calculations.</inlineHelpText>
        <label>Excluded Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exposure_Type__c</fullName>
        <description>Users manually populate this optional text box. This field enables users to specify the exposure type when calculating exposure for a debt.</description>
        <label>Exposure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__High_Credit_Amount__c</fullName>
        <description>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</description>
        <inlineHelpText>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</inlineHelpText>
        <label>High Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Internal_Debt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the Loan Id, which is used to populate the debt fields at a point in time.</description>
        <label>Internal Debt</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Internal Debts</relationshipLabel>
        <relationshipName>Internal_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system or user selects this checkbox field to indicate that the user manually created or edited the debt record. By default, this field is deselected.</description>
        <label>Is Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Non_Escrowed_Property_Cost__c</fullName>
        <description>The system automatically populates this optional formula checkbox field to indicate
        the debt is a non-escrowed property cost. By default, it is false.</description>
        <formula>IF(
            CASE(LLC_BI__Debt_Type__c,
                &quot;Proposed Homeowners Insurance&quot;,
                    IF(
                        INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Homeowners Insurance&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Flood Insurance&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Wind and Hail&quot;),
                        1, 0
                    ),
                &quot;Proposed Property Taxes&quot;,
                    IF(
                        INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;County Property Taxes&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;City Property Taxes&quot;),
                        1, 0
                    ),
                &quot;Proposed Property Association Dues&quot;,
                    IF(
                        INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Condo Association Dues&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Condo Association Special Assessment&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Coop Association Dues&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Coop Association Special Assessment&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Ground Rent&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Homeowners Association Dues&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Homeowners Association Special Assessment&quot;) ||
                            INCLUDES(LLC_BI__Non_Escrowed_Property_Cost_Type__c, &quot;Leasehold Payment&quot;),
                        1, 0
                    ),
                0
            ) == 1, 
            true, 
            false
        )</formula>
        <inlineHelpText>This checkbox indicates the debt is a non-escrowed property cost.</inlineHelpText>
        <label>Is Non-Escrowed Property Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Source_Debt__c</fullName>
        <description>This field represents whether a debt is a source debt. If the output is &apos;True&apos; then debt is a source debt.</description>
        <formula>IF( ISBLANK( LLC_BI__Source_Debt__c ) &amp;&amp; ISBLANK( LLC_BI__Internal_Debt__c ) &amp;&amp; LLC_BI__Is_Manual__c = FALSE &amp;&amp; LLC_BI__New_Debt__c = FALSE, True, False)</formula>
        <label>Is Source Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this boolean field. If selected, the Debt contains total values for the associated Schedule Sections. If deselected, the Debt contains a manually entered or calculated value. By default, it is deselected.</description>
        <label>Is Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this debt is tied to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>This field is optional and represents the date on which the debt matures.</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Payment__c</fullName>
        <description>This field is required and represents the amount paid on the debt every month.</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_Left_To_Pay__c</fullName>
        <description>The system automatically populates this field with the number of months left to pay on the debt from information on the applicant&apos;s credit report.</description>
        <inlineHelpText>This field displays the number of months left to pay on the debt.</inlineHelpText>
        <label>Months Left to Pay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_Reviewed__c</fullName>
        <description>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</description>
        <inlineHelpText>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</inlineHelpText>
        <label>Months Reviewed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional, admin-facing field auto-populates when a debt is created from a selected pricing option. It is used primarily for auditing purposes.</description>
        <label>New Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is true if the debt is for an Offer or if it came from a Credit Report</description>
        <label>New Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Escrowed_Property_Cost_Type__c</fullName>
        <description>Users populate this optional multi-select picklist field to indicate the type(s) of
        non-escrowed property costs associated with the debt record. By default, it is blank.</description>
        <inlineHelpText>Select the type(s) of non-escrowed property costs.</inlineHelpText>
        <label>Non-Escrowed Property Cost Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowners Insurance</fullName>
                </value>
                <value>
                    <fullName>Flood Insurance</fullName>
                </value>
                <value>
                    <fullName>Wind and Hail</fullName>
                </value>
                <value>
                    <fullName>County Property Taxes</fullName>
                </value>
                <value>
                    <fullName>City Property Taxes</fullName>
                </value>
                <value>
                    <fullName>Condo Association Dues</fullName>
                </value>
                <value>
                    <fullName>Condo Association Special Assessment</fullName>
                </value>
                <value>
                    <fullName>Coop Association Dues</fullName>
                </value>
                <value>
                    <fullName>Coop Association Special Assessment</fullName>
                </value>
                <value>
                    <fullName>Ground Rent</fullName>
                </value>
                <value>
                    <fullName>Homeowners Association Dues</fullName>
                </value>
                <value>
                    <fullName>Homeowners Association Special Assessment</fullName>
                </value>
                <value>
                    <fullName>Leasehold Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Amount__c</fullName>
        <description>This field is optional and specifies the full original amount of the loan. (If the loan is pending approval, this is the intended amount for the loan.)</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Past_Due_Amount__c</fullName>
        <description>The system populates this optional currency field with the amount the borrower has past due on the account.</description>
        <inlineHelpText>The system populates this optional currency field with the amount the borrower has past due on the account.</inlineHelpText>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Pattern__c</fullName>
        <description>The system populates this optional text field with the borrower&apos;s payment pattern.</description>
        <inlineHelpText>The system populates this optional text field with the borrower&apos;s payment pattern.</inlineHelpText>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payoff_With_Proceeds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this field to indicate the loan proceeds are used to pay off the debt. By default, it is unchecked.</description>
        <inlineHelpText>Indicate if the loan proceeds are used to pay off the debt.</inlineHelpText>
        <label>Payoff with Proceeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Balance__c</fullName>
        <description>This field is optional and represents the amount of principal remaining on the debt.</description>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field automatically populates via the system once a new debt is created from a product package. This field associates which product package the debt belongs to.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reported_Date__c</fullName>
        <description>The system populates this optional field to indicate the date the creditor last reported the debt to the credit bureau.</description>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Debt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is a cloned debt, this field is populated with its source.</description>
        <label>Source Debt</label>
        <referenceTo>LLC_BI__Debt__c</referenceTo>
        <relationshipLabel>Cloned Debts</relationshipLabel>
        <relationshipName>Cloned_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Terms_Duration__c</fullName>
        <description>The system populates this optional text field with the term duration of the financial obligation.</description>
        <inlineHelpText>The system populates this optional text field with the term duration of the financial obligation.</inlineHelpText>
        <label>Terms Duration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Debt</label>
    <nameField>
        <label>Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>